# CommunityResponse

./: LICENSE  README.MD
Backend/: app.py  pyproject.toml  routes.py  run.sh
Backend/experiment/: nnforSpam.py
Backend/models/: db.py
Backend/routes/: api.py  categorize.py  emoji.py  frequency.py  gender_approximation.py  sentiment.py  spam.py
Backend/tests/: demo_test.py
Backend/utils/: db.py
Frontend/: package.json
Frontend/components/barchart/: main.jsx  test.jsx
Frontend/components/wordcloud/: main.jsx
Frontend/src/: manifest.json
