[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vansh Reddy <68335743+vanshreddy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
textblob = "^0.18.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
